Add teachersoft.js to make request to teachersoftJS

--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
         <button class="btn btn-secondary" id="cancel">
           Cancel
         </button>
+
+        <input type="file" id="input42" multiple />
       </div>
       <hr />
-      <div id="res"></div>
+      <!-- Response -->
+      <div id="res"></div>    
     </div>
 
+    <!-- Installs AXIOS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-    <script src="main.js"></script>
+    <script src="teachersoft.js"></script>
+    <script src="fileTest.js"></script>
   </body>
 </html>
